<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >>
<ImageView

    android:id="@+id/android_picture"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/normal_padding"
    android:contentDescription="@string/image_content_description"
    android:src="@drawable/android"
    />
<Button
android:id="@+id/create_account"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_gravity="center"
android:layout_marginTop="@dimen/small_padding"
android:text="@string/create_account" />
<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_gravity="center_horizontal"
android:paddingTop="@dimen/normal_padding"
android:text="@string/email"
android:textSize="@dimen/normal_text_size"
android:textColor="@color/black_color" />
<EditText
android:id="@+id/user_email"
android:layout_width="@dimen/large_padding"
android:layout_height="wrap_content"
android:inputType="textEmailAddress"
android:layout_gravity="center" />
<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_gravity="center_horizontal"
android:paddingTop="@dimen/normal_padding"
android:textSize="@dimen/normal_text_size"
android:text="@string/password"
android:textColor="@color/black_color" />
<EditText
android:id="@+id/user_password"
android:layout_width="@dimen/large_padding"
android:layout_height="wrap_content"
android:layout_gravity="center"
android:inputType="textPassword" />
<Button
android:id="@+id/connect"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_gravity="center"
android:layout_marginTop="@dimen/normal_padding"
android:text="@string/connect" />
    </LinearLayout>